[package]
name = "hill_vacuum_proc_macros"
version = "0.11.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macros of the HillVacuum main library"
homepage = "https://github.com/IvoryDuke/hill_vacuum_proc_macros"
repository = "https://github.com/IvoryDuke/hill_vacuum_proc_macros"
readme = "README.md"
keywords = ["gamedev", "mapeditor", "bevy"]

[lib]
proc-macro = true

[dependencies.hill_vacuum_shared]
version = "0.11.1"
